@@ -8,11 +8,11 @@ from taggit.utils import edit_string_for_tags, parse_tags
 
 
 class TagWidget(forms.TextInput):
-    def render(self, name, value, attrs=None):
+    def render(self, name, value, attrs=None, renderer=None):
         if value is not None and not isinstance(value, six.string_types):
             value = edit_string_for_tags([
                 o.tag for o in value.select_related("tag")])
-        return super(TagWidget, self).render(name, value, attrs)
+        return super(TagWidget, self).render(name, value, attrs, renderer)
 
 
 class TagField(forms.CharField):
