@@ -1,17 +1,11 @@
 [tox]
 envlist =
-    {py27,py34,py35}-1.8.x
-    {py27,py34,py35}-1.9.x
-    {py27,py34,py35}-1.10.x
     {py27,py34,py35,py36}-1.11.x
     {py34,py35,py36}-2.0.x
     {py35,py36}-master
 
 [testenv]
 deps =
-    1.8.x: https://github.com/django/django/archive/stable/1.8.x.tar.gz#egg=django
-    1.9.x: https://github.com/django/django/archive/stable/1.9.x.tar.gz#egg=django
-    1.10.x: https://github.com/django/django/archive/stable/1.10.x.tar.gz#egg=django
     1.11.x: https://github.com/django/django/archive/stable/1.11.x.tar.gz#egg=django
     2.0.x: https://github.com/django/django/archive/stable/2.0.x.tar.gz#egg=django
     master: https://github.com/django/django/archive/master.tar.gz#egg=django
@@ -21,13 +15,11 @@ whitelist_externals = make
 
 [testenv:flake8]
 skip_install = true
-usedevelop = false
 changedir = {toxinidir}
 deps = flake8
 commands = flake8 *.py taggit/ tests/
 
 [testenv:isort]
-usedevelop = false
 deps = isort
 changedir = {toxinidir}
 commands = isort --recursive --check-only --diff taggit tests
