@@ -1,6 +1,10 @@
 Changelog
 =========
 
+UNRELEASED
+~~~~~~~~~~
+ * **Backwards incompatible:** Remove support for Django < 1.11
+
 0.22.2 (2017-12-27)
 ~~~~~~~~~~~~~~~~~~~
  * Added support for Django 2.0
